--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "covid",
+  "homepage": "http://salvosaieva.github.io/covid",
+  "name": "covid-italy",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@material-ui/lab": "^4.0.0-alpha.16",
+    "@material-ui/styles": "^4.0.0",
+    "material-table": "^1.57.2",
+    "node-sass": "^4.13.1",
+    "numeral": "^2.0.6",
+    "opencollective-postinstall": "^2.0.2",
+    "query-string": "^6.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.0",
+    "react-swipeable-views-utils": "^0.13.0",
+    "recharts": "^1.3.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "opencollective-postinstall || true"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/material-sense"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
